<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_bar"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/menu_sort_title"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/subitem_sort_by_name" />

            <item
                android:id="@+id/action_sort_by_date_created"
                android:title="@string/subitem_sort_by_date_created" />
        </menu>

    </item>

    <item
        android:id="@+id/action_hide_completed_tasks"
        android:checkable="true"
        android:title="@string/hide_completed"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all_completed"
        android:title="@string/delete_all_completed"
        app:showAsAction="never" />
</menu>